Added news component and refactoring

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,173 +1,173 @@
-<section class="app-main__card">
-    <div class="app-main__tile">
-        <h1 class="app-main__tile-header">
+<section class="app-about__card">
+    <div class="app-about__tile">
+        <h1 class="app-about__tile-header">
             {{'main.tile.header' | translate}}
         </h1>
-        <span class="app-main__tile-text">
+        <span class="app-about__tile-text">
             {{'main.tile.text' | translate}}
         </span>
     </div>
 </section>
 
-<section class="app-main__description">
-    <div class="app-main__description-text">
+<section class="app-about__description">
+    <div class="app-about__description-text">
         {{'main.description' | translate}}
     </div>
 </section>
 
-<section class="app-main__rosnano">
-    <img class="app-main__rosnano-image" src="./assets/images/rosnano.jpg" alt="Rosnano image">
+<section class="app-about__rosnano">
+    <img class="app-about__rosnano-image" src="./assets/images/rosnano.jpg" alt="Rosnano image">
 
-    <div class="app-main__rosnano-wrapper">
-        <div class="app-main__rosnano-text">
+    <div class="app-about__rosnano-wrapper">
+        <div class="app-about__rosnano-text">
             {{'main.rosnano' | translate}}
         </div>
     </div>
 </section>
 
-<section class="app-main__features">
-    <div class="app-main__features-column">
-        <div class="app-main__features-row">
+<section class="app-about__features">
+    <div class="app-about__features-column">
+        <div class="app-about__features-row">
             {{'main.features.left-top' | translate}}
         </div>
-        <div class="app-main__features-row">
+        <div class="app-about__features-row">
             {{'main.features.left-middle' | translate}}
         </div>
-        <div class="app-main__features-row">
+        <div class="app-about__features-row">
             {{'main.features.left-bottom' | translate}}
         </div>
     </div>
 
-    <div class="app-main__features-column">
+    <div class="app-about__features-column">
         <svg-icon src="./assets/icons/sun-panel.svg"
-                  class="app-main__features-icon"
+                  class="app-about__features-icon"
         ></svg-icon>
     </div>
 
-    <div class="app-main__features-column">
-        <div class="app-main__features-row">
+    <div class="app-about__features-column">
+        <div class="app-about__features-row">
             {{'main.features.right-top' | translate}}
         </div>
-        <div class="app-main__features-row">
+        <div class="app-about__features-row">
             {{'main.features.right-middle' | translate}}
         </div>
-        <div class="app-main__features-row">
+        <div class="app-about__features-row">
             {{'main.features.right-bottom' | translate}}
         </div>
     </div>
 </section>
 
-<section class="app-main__pros">
-    <div class="app-main__pros-item">
+<section class="app-about__pros">
+    <div class="app-about__pros-item">
         <svg-icon
             src="./assets/icons/award.svg"
-            class="app-main__pros-icon"
+            class="app-about__pros-icon"
         >
         </svg-icon>
 
-        <span class="app-main__pros-title">
+        <span class="app-about__pros-title">
             {{'main.pros.expertise' | translate}}
         </span>
 
-        <span class="app-main__pros-text">
+        <span class="app-about__pros-text">
             {{'main.pros.expertise-text' | translate}}
         </span>
     </div>
 
-    <div class="app-main__pros-item">
+    <div class="app-about__pros-item">
         <svg-icon
                 src="./assets/icons/target.svg"
-                class="app-main__pros-icon"
+                class="app-about__pros-icon"
         >
         </svg-icon>
 
-        <span class="app-main__pros-title">
+        <span class="app-about__pros-title">
             {{'main.pros.result' | translate}}
         </span>
 
-        <span class="app-main__pros-text">
+        <span class="app-about__pros-text">
             {{'main.pros.result-text' | translate}}
         </span>
     </div>
 
-    <div class="app-main__pros-item">
+    <div class="app-about__pros-item">
         <svg-icon
                 src="./assets/icons/trend.svg"
-                class="app-main__pros-icon"
+                class="app-about__pros-icon"
         >
         </svg-icon>
 
-        <span class="app-main__pros-title">
+        <span class="app-about__pros-title">
             {{'main.pros.revenue' | translate}}
         </span>
 
-        <span class="app-main__pros-text">
+        <span class="app-about__pros-text">
             {{'main.pros.revenue-text' | translate}}
         </span>
     </div>
 
-    <div class="app-main__pros-item">
+    <div class="app-about__pros-item">
         <svg-icon
                 src="./assets/icons/briefcase.svg"
-                class="app-main__pros-icon"
+                class="app-about__pros-icon"
         >
         </svg-icon>
 
-        <span class="app-main__pros-title">
+        <span class="app-about__pros-title">
             {{'main.pros.reputation' | translate}}
         </span>
 
-        <span class="app-main__pros-text">
+        <span class="app-about__pros-text">
             {{'main.pros.reputation-text' | translate}}
         </span>
     </div>
 </section>
 
-<section class="app-main__partners">
-    <h1 class="app-main__partners-header">
+<section class="app-about__partners">
+    <h1 class="app-about__partners-header">
         {{'main.partners' | translate}}
     </h1>
 
-    <div class="app-main__partners-list">
-        <a class="app-main__partners-link">
+    <div class="app-about__partners-list">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
-        <a class="app-main__partners-link">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
-        <a class="app-main__partners-link">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
-        <a class="app-main__partners-link">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
-        <a class="app-main__partners-link">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
-        <a class="app-main__partners-link">
+        <a class="app-about__partners-link">
             <img
                     src="./assets/images/amazon-logo.png"
-                    class="app-main__partners-logo"
+                    class="app-about__partners-logo"
                     alt="Partner's logo"
             >
         </a>
