--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,7 +1,7 @@
 @import "src/assets/styles/colors";
 @import "src/assets/styles/mixins";
 
-.app-main {
+.app-about {
   display: flex;
   flex-direction: column;
   align-items: center;
