--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,7 @@
 
     &-text {
       padding-left: 16px;
+      margin-right: 16px;
       white-space: nowrap;
       @include font(28px, bold);
     }
@@ -67,8 +68,7 @@
         left: 0;
         right: 0;
         bottom: -4px;
-        transition: opacity 0.2s ease,
-        bottom 0.2s ease;
+        transition: opacity 0.2s ease, bottom 0.2s ease;
       }
 
       &:hover:after,
@@ -142,10 +142,10 @@
 
     &__language-dropdown {
       .app-language-dropdown__flag,
-       .app-language-dropdown__flag svg {
-         width: 16px;
-         height: 16px;
-       }
+      .app-language-dropdown__flag svg {
+        width: 16px;
+        height: 16px;
+      }
     }
 
     &__footer {
