--- a/src/app/components/language-dropdown/language-dropdown.component.scss
+++ b/src/app/components/language-dropdown/language-dropdown.component.scss
@@ -68,4 +68,16 @@
       }
     }
   }
+
+  @media only screen and (max-width: 960px) {
+    &__list {
+      width: 80px;
+      bottom: -86px;
+
+      &-item {
+        height: 40px;
+        font-size: 32px;
+      }
+    }
+  }
 }
