--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -11,10 +11,10 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 400px;
     background-image: url("/assets/images/solar-batteries.jpg");
     background-repeat: no-repeat;
     background-position: center;
+    min-height: 40vh;
   }
 
   &__tile {
@@ -41,6 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 40vh;
 
     &-text {
       width: 60%;
@@ -61,23 +62,25 @@
       padding: 32px 0;
       width: 50%;
       min-width: 400px;
+      max-height: 40vh;
     }
 
     &-text {
       width: 70%;
-      @include font(26px, 200, $snow-white);
+      @include font(22px, 200, $snow-white);
     }
 
     &-image {
       flex-grow: 1;
       width: 50%;
       min-width: 400px;
+      max-height: 40vh;
     }
   }
 
   &__features {
     display: flex;
-    height: 400px;
+    min-height: 40vh;
     margin: auto;
     padding-bottom: 64px;
 
@@ -105,7 +108,7 @@
 
     &-column:first-child &-row {
       &:nth-child(1):after {
-        content: '';
+        content: "";
         position: absolute;
         transform: rotateZ(45deg);
         right: -42px;
@@ -115,7 +118,7 @@
       }
 
       &:nth-child(2):after {
-        content: '';
+        content: "";
         position: absolute;
         right: -2vw;
         bottom: -1px;
@@ -124,7 +127,7 @@
       }
 
       &:nth-child(3):after {
-        content: '';
+        content: "";
         position: absolute;
         transform: rotateZ(-45deg);
         right: -42px;
@@ -136,7 +139,7 @@
 
     &-column:last-child &-row {
       &:nth-child(1):after {
-        content: '';
+        content: "";
         position: absolute;
         transform: rotateZ(-45deg);
         left: -42px;
@@ -146,7 +149,7 @@
       }
 
       &:nth-child(2):after {
-        content: '';
+        content: "";
         position: absolute;
         left: -2vw;
         bottom: -1px;
@@ -155,7 +158,7 @@
       }
 
       &:nth-child(3):after {
-        content: '';
+        content: "";
         position: absolute;
         transform: rotateZ(45deg);
         left: -42px;
@@ -185,15 +188,15 @@
     background-color: $primary-orange;
 
     &-item {
-      margin-top: 40px;
       display: flex;
       align-items: center;
+      justify-content: center;
       flex-direction: column;
       min-width: 200px;
+      min-height: 40vh;
       width: 15%;
       padding: 0 32px;
       flex-grow: 1;
-      margin-bottom: 32px;
     }
 
     &-icon {
@@ -218,10 +221,11 @@
     flex-wrap: wrap;
     align-items: center;
     flex-direction: column;
-    padding:  32px 120px;
+    min-height: 40vh;
+    padding: 32px 120px;
 
     &-header {
-      margin: 32px 0;
+      margin: 40px 0;
       text-align: center;
       @include font(36px, 700);
     }
