--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -1,162 +1,119 @@
 @import "src/assets/styles/colors";
 @import "src/assets/styles/mixins";
 
-.app-documents {
+.app-news {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+
   flex-grow: 1;
-  margin: 30px 120px;
+  margin: 60px 120px;
 
-  .highlighted {
-    background-color: $primary-orange;
-    color: $snow-white;
+  @media only screen and (max-width: 960px) {
+    margin: 60px;
   }
 
-  &__navigation {
-    display: flex;
-    flex-direction: column;
-    margin-right: 60px;
-    min-width: 260px;
-
-    &-item {
-      display: flex;
-      align-items: center;
-      height: 52px;
-      background-color: $dark-grey;
-      @include font(18px, 400, $snow-white);
-      transition: transform 0.2s ease,
-      background-color 0.2s ease,
-      border 0.2s ease,
-      color 0.2s ease;
-      cursor: pointer;
-      margin-bottom: 10px;
-      padding-left: 16px;
-
-      &._logout {
-        border: 4px solid $dark-grey;
-        color: $dark-grey;
-        background-color: transparent;
-        justify-self: end;
-
-        &:hover {
-          border-color: $primary-orange;
-          color: $primary-orange;
-        }
-      }
-
-      &._selected,
-      &:not(._logout):hover {
-        transform: translate3d(25px, 0, 0);
-        background-color: $primary-orange;
-      }
-    }
-  }
-
-  &__documents {
+  &__form {
     display: flex;
     flex-direction: column;
     width: 100%;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+    max-width: 960px;
   }
 
-  &__header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
+  &__title {
+    margin-bottom: 16px;
+  }
+
+  &__label {
+    @include font(20px, 400);
+  }
+
+  &__text-field,
+  &__memo-field {
+    margin-bottom: 16px;
+    height: 32px;
+    min-width: 100%;
+    max-width: 100%;
+    border: 2px solid $grey;
+    border-radius: 4px;
+    padding: 0 16px;
+
+    &:focus {
+      border-color: $dark-grey;
+    }
+  }
+
+  &__memo-field {
     height: 100px;
-    background-image: url("/assets/images/documents.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
+    padding: 16px;
   }
 
-  &__search {
-    width: 320px;
+  &__button {
+    &-wrapper {
+      display: flex;
+      margin-bottom: 40px;
+    }
+
+    width: 120px;
+    height: 32px;
+    margin-right: 16px;
+    @include font(20px, 400);
   }
 
   &__list {
+    width: 100%;
+    max-width: 960px;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    padding: 16px 120px;
+    align-items: center;
+  }
 
-    &-item {
-      display: flex;
-      align-items: center;
-      list-style: none;
+  &__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    &-title {
+      @include font(26px, 700);
+    }
+
+    &-text {
+      @include font(20px, 400);
       margin-bottom: 16px;
-
-      &-icon {
-        margin-right: 16px;
-        cursor: pointer;
-
-        & > svg {
-          fill: $dark-grey;
-          stroke: $dark-grey;
-        }
-
-        &:hover > svg {
-          fill: $primary-orange;
-          stroke: $primary-orange;
-        }
-      }
-
-      &-text {
-        margin-right: 16px;
-        @include font(19px);
-      }
     }
 
-    &-upload {
-      display: flex;
-      align-items: center;
-      list-style: none;
+    &-date {
+      text-align: end;
+      padding: 0 10%;
+      @include font(16px, 400, $grey);
+    }
+
+    &-icon {
+      position: absolute;
+      top: 0;
+      right: 0;
       cursor: pointer;
-      @include font(19px);
 
-      &-icon {
-        margin-right: 16px;
+      & > svg {
+        fill: $dark-grey;
+        stroke: $dark-grey;
       }
-    }
 
-    &-empty {
-      margin: auto;
-      @include font(19px, 400, $grey);
+      &:hover > svg {
+        fill: $primary-orange;
+        stroke: $primary-orange;
+      }
     }
   }
 
-  @media only screen and (max-width: 960px) {
-    flex-direction: column;
-    margin: 16px;
+  &__separator {
+    width: 80%;
+    border-bottom: 1px solid $dark-grey;
+    margin: 60px 0;
+  }
 
-    &__description {
-      padding: 32px;
-    }
-
-    &__navigation {
-      margin-right: 0;
-
-      &-item {
-        &._selected,
-        &:not(._logout):hover {
-          transform: translate3d(0, 0, 0);
-          background-color: $primary-orange;
-        }
-      }
-    }
-
-    &__list {
-      padding: 16px;
-
-      &-wrapper {
-        overflow: inherit;
-      }
-
-      &-item-text,
-      &-empty,
-      &-upload {
-        font-size: 16px;
-      }
-    }
+  &__no-news {
+    @include font(30px, 400, $grey);
   }
 }
