--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,7 @@
 @import "./src/assets/styles/mixins";
 
 .app-root {
-  display: flex;
-  flex-direction: column;
+  display: block;
   position: relative;
   height: 100%;
   width: 100%;
