--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -14,7 +14,7 @@
     &-item {
       display: flex;
       flex-direction: column;
-      padding-top: 60px;
+      padding: 60px;
       height: 240px;
       max-width: 320px;
     }
@@ -39,7 +39,7 @@
 
     &-header {
       @include font(32px, 700);
-      margin-bottom: 40;
+      margin-bottom: 40px;
     }
 
     &-title {
@@ -56,7 +56,12 @@
   @media only screen and (max-width: 960px) {
     &__info {
       flex-direction: column;
-      padding: 0 60px;
+      padding: 0 30px;
+
+      &-item {
+        height: 160px;
+        padding: 20px 0;
+      }
     }
 
     &__description {
