About page adjusted and nodemon fixed

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,174 +1,70 @@
 <section class="app-about__card">
     <div class="app-about__tile">
         <h1 class="app-about__tile-header">
-            {{'main.tile.header' | translate}}
+            {{'about.tile.header' | translate}}
         </h1>
         <span class="app-about__tile-text">
-            {{'main.tile.text' | translate}}
+            {{'about.tile.text' | translate}}
         </span>
     </div>
 </section>
 
 <section class="app-about__description">
     <div class="app-about__description-text">
-        {{'main.description' | translate}}
-    </div>
-</section>
-
-<section class="app-about__rosnano">
-    <img class="app-about__rosnano-image" src="./assets/images/rosnano.jpg" alt="Rosnano image">
-
-    <div class="app-about__rosnano-wrapper">
-        <div class="app-about__rosnano-text">
-            {{'main.rosnano' | translate}}
-        </div>
-    </div>
-</section>
-
-<section class="app-about__features">
-    <div class="app-about__features-column">
-        <div class="app-about__features-row">
-            {{'main.features.left-top' | translate}}
-        </div>
-        <div class="app-about__features-row">
-            {{'main.features.left-middle' | translate}}
-        </div>
-        <div class="app-about__features-row">
-            {{'main.features.left-bottom' | translate}}
-        </div>
-    </div>
-
-    <div class="app-about__features-column">
-        <svg-icon src="./assets/icons/sun-panel.svg"
-                  class="app-about__features-icon"
-        ></svg-icon>
-    </div>
-
-    <div class="app-about__features-column">
-        <div class="app-about__features-row">
-            {{'main.features.right-top' | translate}}
-        </div>
-        <div class="app-about__features-row">
-            {{'main.features.right-middle' | translate}}
-        </div>
-        <div class="app-about__features-row">
-            {{'main.features.right-bottom' | translate}}
-        </div>
-    </div>
-</section>
-
-<section class="app-about__pros">
-    <div class="app-about__pros-item">
-        <svg-icon
-            src="./assets/icons/award.svg"
-            class="app-about__pros-icon"
-        >
-        </svg-icon>
-
-        <span class="app-about__pros-title">
-            {{'main.pros.expertise' | translate}}
-        </span>
-
-        <span class="app-about__pros-text">
-            {{'main.pros.expertise-text' | translate}}
-        </span>
-    </div>
-
-    <div class="app-about__pros-item">
-        <svg-icon
-                src="./assets/icons/target.svg"
-                class="app-about__pros-icon"
-        >
-        </svg-icon>
-
-        <span class="app-about__pros-title">
-            {{'main.pros.result' | translate}}
-        </span>
-
-        <span class="app-about__pros-text">
-            {{'main.pros.result-text' | translate}}
-        </span>
-    </div>
-
-    <div class="app-about__pros-item">
-        <svg-icon
-                src="./assets/icons/trend.svg"
-                class="app-about__pros-icon"
-        >
-        </svg-icon>
-
-        <span class="app-about__pros-title">
-            {{'main.pros.revenue' | translate}}
-        </span>
-
-        <span class="app-about__pros-text">
-            {{'main.pros.revenue-text' | translate}}
-        </span>
-    </div>
-
-    <div class="app-about__pros-item">
-        <svg-icon
-                src="./assets/icons/briefcase.svg"
-                class="app-about__pros-icon"
-        >
-        </svg-icon>
-
-        <span class="app-about__pros-title">
-            {{'main.pros.reputation' | translate}}
-        </span>
-
-        <span class="app-about__pros-text">
-            {{'main.pros.reputation-text' | translate}}
-        </span>
+        {{'about.description' | translate}}
     </div>
 </section>
 
 <section class="app-about__partners">
-    <h1 class="app-about__partners-header">
-        {{'main.partners' | translate}}
-    </h1>
+    <span class="app-about__partners-header">
+        {{'about.partners.header' | translate}}
+    </span>
+
+    <span class="app-about__partners-text">
+        {{'about.partners.text' | translate}}
+    </span>
 
     <div class="app-about__partners-list">
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
         <a class="app-about__partners-link">
             <img
-                    src="./assets/images/amazon-logo.png"
-                    class="app-about__partners-logo"
-                    alt="Partner's logo"
+                src="./assets/images/amazon-logo.png"
+                class="app-about__partners-logo"
+                alt="Partner's logo"
             >
         </a>
     </div>
