--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -94,13 +94,29 @@
       @include font(14px, 200, $snow-white);
       text-align: center;
       padding: 16px;
+
+      &-row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 4px;
+      }
     }
 
     &-separator {
-      height: 60%;
+      height: 60px;
       border-right: 1px solid $snow-white;
       margin: 0 32px;
     }
+  }
+
+  &__login-icon {
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    margin-left: 4px;
+    outline: none;
+    cursor: pointer;
   }
 
   &__contact {
@@ -135,16 +151,8 @@
     }
 
     &__nav-item {
-      @include font(16px, 400);
-      margin-right: 16px;
-    }
-
-    &__language-dropdown {
-      .app-language-dropdown__flag,
-      .app-language-dropdown__flag svg {
-        width: 16px;
-        height: 16px;
-      }
+      @include font(18px, 400);
+      margin-right: 8px;
     }
 
     &__footer {
