--- a/src/app/components/language-dropdown/language-dropdown.component.scss
+++ b/src/app/components/language-dropdown/language-dropdown.component.scss
@@ -16,7 +16,7 @@
     overflow: hidden;
     height: 32px;
     width: 32px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
   }
 
   &__arrow {
@@ -72,7 +72,8 @@
   @media only screen and (max-width: 960px) {
     &__list {
       width: 80px;
-      bottom: -86px;
+      bottom: -88px;
+      right: 4px;
 
       &-item {
         height: 40px;
