--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -134,6 +134,8 @@
 
       &-list {
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
