--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -9,14 +9,14 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 120px;
+
     background-color: $dark-grey;
 
     &-item {
       display: flex;
       flex-direction: column;
-      padding: 60px;
-      height: 240px;
-      max-width: 320px;
+      margin: 60px;
+      width: 260px;
     }
 
     &-title {
@@ -35,11 +35,11 @@
   }
 
   &__description {
-    padding: 32px 120px;
+    padding: 50px 120px 0 120px;
 
     &-header {
       @include font(32px, 700);
-      margin-bottom: 40px;
+      margin-bottom: 20px;
     }
 
     &-title {
@@ -56,16 +56,15 @@
   @media only screen and (max-width: 960px) {
     &__info {
       flex-direction: column;
-      padding: 0 30px;
+      padding: 10px 40px;
 
       &-item {
-        height: 160px;
-        padding: 20px 0;
+        margin: 40px 20px;
       }
     }
 
     &__description {
-      padding: 32px;
+      padding: 30px 30px 0px 30px;
     }
   }
 }
