--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -1,90 +1,98 @@
-<ul class="app-documents__navigation">
-    <li
-        *ngFor="let group of _documentGroups; let index = index"
-        class="app-documents__navigation-item"
-        [class._selected]="_selectedGroupIndex === index"
-        (click)="_selectedGroupIndex = index"
-    >
-        {{group.title | dictionaryTranslate}}
-    </li>
+<app-loader
+    class="app-documents__loader"
+    [visible]="_loading"
+></app-loader>
 
-    <li
-        *ngIf="_logged"
-        class="app-documents__navigation-item _logout"
-        (click)="_onLogoutButtonClick()"
-    >
-        {{ 'documents.logout' | translate}}
-    </li>
-</ul>
+<ng-container 
+    *ngIf="!_loading"
+>
+    <ul class="app-documents__navigation">
+        <li
+            *ngFor="let group of _documentGroups; let index = index"
+            class="app-documents__navigation-item"
+            [class._selected]="_selectedGroupIndex === index"
+            (click)="_selectedGroupIndex = index"
+        >
+            {{group.title | dictionaryTranslate}}
+        </li>
 
-<div class="app-documents__documents">
-    <div class="app-documents__header">
-        <app-search-field
-            class="app-documents__search"
-            [placeholder]="'documents.search' | translate"
-            (valueChange)="_searchValue = $event"
-        ></app-search-field>
-    </div>
-
-    <ul class="app-documents__list">
-        <ng-container *ngIf="_documentGroups">
-            <li
-                class="app-documents__list-item"
-                *ngFor="let fileName of (_documentGroups[_selectedGroupIndex].fileNames | filter : _searchValue)"
-
-            >
-                <svg-icon
-                    src="./assets/icons/download.svg"
-                    class="app-documents__list-item-icon"
-                    (click)="_onDownloadFileClick(fileName)"
-                ></svg-icon>
-
-                <span class="app-documents__list-item-text"
-                    [innerHTML]="fileName | mark: _searchValue"
-                >
-                </span>
-
-                <svg-icon
-                    src="./assets/icons/delete.svg"
-                    class="app-documents__list-item-icon"
-                    *ngIf="_logged"
-                    (click)="_onDeleteFileClick(fileName)"
-                ></svg-icon>
-            </li>
-
-            <label
-                class="app-documents__list-upload"
-                *ngIf="_logged"
-            >
-                <svg-icon
-                    src="./assets/icons/upload.svg"
-                    class="app-documents__list-upload-icon"
-                ></svg-icon>
-
-                {{'documents.upload-documents' | translate}}
-
-                <input
-                    style="display: none"
-                    id="file-upload"
-                    type="file"
-                    multiple
-                    placeholder="Upload file"
-                    accept=".pdf,.doc,.docx"
-                    (change)="_onUploadFileChange($event)"
-                >
-            </label>
-
-
-            <div
-                *ngIf="
-                    (_documentGroups[_selectedGroupIndex].fileNames | filter: _searchValue).length === 0 &&
-                    !_logged
-                "
-                class="app-documents__list-empty"
-            >
-                {{'documents.no-results' | translate}}
-            </div>
-        </ng-container>
+        <li
+            *ngIf="_logged"
+            class="app-documents__navigation-item _logout"
+            (click)="_onLogoutButtonClick()"
+        >
+            {{ 'documents.logout' | translate}}
+        </li>
     </ul>
-</div>
 
+    <div class="app-documents__documents">
+        <div class="app-documents__header">
+            <app-search-field
+                class="app-documents__search"
+                [placeholder]="'documents.search' | translate"
+                (valueChange)="_searchValue = $event"
+            ></app-search-field>
+        </div>
+
+        <ul class="app-documents__list">
+            <ng-container *ngIf="_documentGroups">
+                <li
+                    class="app-documents__list-item"
+                    *ngFor="let fileName of (_documentGroups[_selectedGroupIndex].fileNames | filter : _searchValue)"
+
+                >
+                    <svg-icon
+                        src="./assets/icons/download.svg"
+                        class="app-documents__list-item-icon"
+                        (click)="_onDownloadFileClick(fileName)"
+                    ></svg-icon>
+
+                    <span class="app-documents__list-item-text"
+                        [innerHTML]="fileName | mark: _searchValue"
+                    >
+                    </span>
+
+                    <svg-icon
+                        src="./assets/icons/delete.svg"
+                        class="app-documents__list-item-icon"
+                        *ngIf="_logged"
+                        (click)="_onDeleteFileClick(fileName)"
+                    ></svg-icon>
+                </li>
+
+                <label
+                    class="app-documents__list-upload"
+                    *ngIf="_logged"
+                >
+                    <svg-icon
+                        src="./assets/icons/upload.svg"
+                        class="app-documents__list-upload-icon"
+                    ></svg-icon>
+
+                    {{'documents.upload-documents' | translate}}
+
+                    <input
+                        style="display: none"
+                        id="file-upload"
+                        type="file"
+                        multiple
+                        placeholder="Upload file"
+                        accept=".pdf,.doc,.docx"
+                        (change)="_onUploadFileChange($event)"
+                    >
+                </label>
+
+
+                <div
+                    *ngIf="
+                        (_documentGroups[_selectedGroupIndex].fileNames | filter: _searchValue).length === 0 &&
+                        !_logged
+                    "
+                    class="app-documents__list-empty"
+                >
+                    {{'documents.no-results' | translate}}
+                </div>
+            </ng-container>
+        </ul>
+    </div>
+</ng-container>
