Server refactored, styles adjusted and translations added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
     </svg>
 
     <div class="app-root__logo-text">
-      СОЛНЕЧНАЯ ГЕНЕРАЦИЯ X
+      СОЛНЕЧНАЯ ГЕНЕРАЦИЯ Х
     </div>
   </div>
 
@@ -59,7 +59,9 @@
   </nav>
 </header>
 
-<router-outlet></router-outlet>
+<main class="app-root__main">
+  <router-outlet></router-outlet>
+</main>
 
 <footer class="app-root__footer">
   <div class="app-root__footer-text">
