--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,21 +2,23 @@
 @import "./src/assets/styles/mixins";
 
 .app-root {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
   background-color: $snow-white;
   overflow: auto;
 
   &__header {
-    position: sticky;
-    top: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
     z-index: 1;
+    flex-shrink: 0;
     padding: 0 120px;
 
     background-color: $snow-white;
@@ -83,11 +85,16 @@
     }
   }
 
+  &__main {
+    flex-grow: 1;
+    width: 100%;
+  }
+
   &__footer {
     display: flex;
-    flex-shrink: 0;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
     background-color: $dark-grey;
 
     &-text {
@@ -151,8 +158,8 @@
     }
 
     &__nav-item {
-      @include font(18px, 400);
-      margin-right: 8px;
+      font-size: 16px;
+      margin-right: 10px;
     }
 
     &__footer {
