--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 60px;
-    min-width: 260px;
+    min-width: 300px;
 
     &-item {
       display: flex;
@@ -53,8 +53,7 @@
   &__documents {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    width: 100%;
+    width: calc(100% - 300px);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   }
 
@@ -136,6 +135,10 @@
 
     &__loader {
       margin-top: 140px !important;
+    }
+
+    &__documents {
+      width: 100%;
     }
 
     &__navigation {
