--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,11 +17,17 @@ body {
   width: 100vw;
 }
 
-h1,h2,h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
-ul, li {
+ul,
+li {
   margin: 0;
   padding: 0;
 }
