--- a/src/app/components/language-dropdown/language-dropdown.component.html
+++ b/src/app/components/language-dropdown/language-dropdown.component.html
@@ -36,7 +36,7 @@
         [class._selected]="_language === language"
         (click)="_selectLanguage(language)"
     >
-        {{language}}
+        {{language | titlecase}}
     </li>
 </ul>
 
