--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -41,18 +41,23 @@
                     *ngFor="let fileName of (_documentGroups[_selectedGroupIndex].fileNames | filter : _searchValue)"
 
                 >
-                    <svg-icon
-                        src="./assets/icons/download.svg"
-                        class="app-documents__list-item-icon"
+                    <div
+                        class="app-documents__list-item-link"
                         (click)="_onDownloadFileClick(fileName)"
-                    ></svg-icon>
-
-                    <span 
-                        class="app-documents__list-item-text"
-                        [innerHTML]="fileName | mark: _searchValue"
-                        [title]="fileName"
                     >
-                    </span>
+                        <svg-icon
+                            src="./assets/icons/download.svg"
+                            class="app-documents__list-item-icon"
+                        ></svg-icon>
+
+                        <span 
+                            class="app-documents__list-item-text"
+                            [innerHTML]="fileName | mark: _searchValue"
+                            [title]="fileName"
+                        >
+                        </span>
+                    </div>
+                    
 
                     <svg-icon
                         src="./assets/icons/delete.svg"
