--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   height: 100%;
-  margin: 30px 120px;
+  padding: 30px 120px;
 
   .highlighted {
     background-color: $primary-orange;
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 60px;
-    min-width: 300px;
+    flex: 0 0 300px;
 
     &-item {
       display: flex;
@@ -53,7 +53,7 @@
   &__documents {
     display: flex;
     flex-direction: column;
-    width: calc(100% - 300px);
+    width: calc(100% - 360px);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   }
 
@@ -78,6 +78,7 @@
     flex-direction: column;
     flex-grow: 1;
     padding: 16px 120px;
+    cursor: pointer;
 
     &-item {
       display: flex;
@@ -87,16 +88,15 @@
 
       &-icon {
         margin-right: 16px;
-        cursor: pointer;
 
         & > svg {
           fill: $dark-grey;
           stroke: $dark-grey;
-        }
 
-        &:hover > svg {
-          fill: $primary-orange;
-          stroke: $primary-orange;
+          &:hover {
+            fill: $primary-orange;
+            stroke: $primary-orange;
+          }
         }
       }
 
@@ -106,6 +106,23 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         @include font(19px);
+      }
+
+      &-link {
+        display: inline-flex;
+        align-items: center;
+        width: 100%;
+      }
+
+      &-link:hover & {
+        &-text {
+          color: $primary-orange;
+        }
+
+        &-icon > svg {
+          fill: $primary-orange;
+          stroke: $primary-orange;
+        }
       }
     }
 
@@ -131,11 +148,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    margin: 20px;
-
-    &__loader {
-      margin-top: 140px !important;
-    }
+    padding: 20px;
 
     &__documents {
       width: 100%;
