--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  margin: 30px 120px;
+  padding: 30px 120px;
 
   &__form {
     display: flex;
@@ -91,7 +91,6 @@
 
     &-date {
       text-align: end;
-      padding: 0 10%;
       @include font(16px, 400, $grey);
     }
 
@@ -116,7 +115,7 @@
   &__separator {
     width: 80%;
     border-bottom: 1px solid $dark-grey;
-    margin: 60px 0;
+    padding: 60px 0;
   }
 
   &__no-news {
