--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -123,7 +123,7 @@
   }
 
   @media only screen and (max-width: 960px) {
-    margin: 20px;
+    padding: 20px;
 
     &__no-news {
       font-size: 22px;
