--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -4,7 +4,6 @@
 .app-documents {
   display: flex;
   justify-content: center;
-  height: 100%;
   padding: 30px 120px;
 
   .highlighted {
@@ -21,11 +20,11 @@
     &-item {
       display: flex;
       align-items: center;
+      flex-shrink: 0;
       height: 52px;
       background-color: $dark-grey;
       @include font(18px, 400, $snow-white);
-      transition: transform 0.2s ease, background-color 0.2s ease,
-        border 0.2s ease, color 0.2s ease;
+      transition: transform 0.2s ease, background-color 0.2s ease, border 0.2s ease, color 0.2s ease;
       cursor: pointer;
       margin-bottom: 10px;
       padding-left: 16px;
@@ -85,6 +84,7 @@
       align-items: center;
       list-style: none;
       margin-bottom: 16px;
+      width: 90%;
 
       &-icon {
         margin-right: 16px;
