--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,11 +4,9 @@
 .app-root {
   display: flex;
   flex-direction: column;
-  position: relative;
-  width: 100%;
-  height: 100%;
+  flex-grow: 1;
+  min-height: 100%;
   background-color: $snow-white;
-  overflow: auto;
 
   &__header {
     display: flex;
