--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -15,7 +15,7 @@
     &-item {
       display: flex;
       flex-direction: column;
-      margin: 60px;
+      margin: 60px 20px;
       width: 260px;
     }
 
