--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,16 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  min-height: 100%;
+  position: relative;
 }
 
 h1,
