--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -115,7 +115,7 @@
   &__separator {
     width: 80%;
     border-bottom: 1px solid $dark-grey;
-    padding: 60px 0;
+    margin: 30px 0;
   }
 
   &__no-news {
