--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -4,7 +4,6 @@
 .app-documents {
   display: flex;
   justify-content: center;
-  height: 100%;
   padding: 30px 120px;
 
   .highlighted {
@@ -16,7 +15,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 60px;
-    flex: 0 0 300px;
+    flex: 1 0 300px;
 
     &-item {
       display: flex;
@@ -53,7 +52,7 @@
   &__documents {
     display: flex;
     flex-direction: column;
-    width: calc(100% - 360px);
+    flex: 1 0 calc(100% - 360px);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   }
 
@@ -147,17 +146,18 @@
 
   @media only screen and (max-width: 960px) {
     flex-direction: column;
-    justify-content: start;
     align-items: center;
     padding: 20px;
 
     &__documents {
       width: 100%;
+      flex-basis: 100%;
     }
 
     &__navigation {
       margin-right: 0;
       width: 100%;
+      flex-basis: 100%;
 
       &-item {
         &._selected,
