--- a/src/app/components/language-dropdown/language-dropdown.component.scss
+++ b/src/app/components/language-dropdown/language-dropdown.component.scss
@@ -14,6 +14,7 @@
   &__flag {
     border-radius: 50%;
     overflow: hidden;
+    margin-left: -1px;
     height: 30px;
     width: 30px;
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
