--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,8 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  flex-grow: 1;
 
   background-image: url("/assets/images/solar-batteries.jpg");
   background-repeat: no-repeat;
@@ -42,7 +41,6 @@
     border: none;
     @include font(18px, 400);
     flex-shrink: 0;
-
 
     &::placeholder {
       @include font(18px, 400, $grey);
