Update build anf img

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     width: 100%;
     min-height: 40vh;
-    background-image: url("/assets/images/solar-batteries.jpg");
+    background-image: url("/assets/images/solar-batteries.gif");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
