--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@
       padding-left: 16px;
       margin-right: 16px;
       white-space: nowrap;
-      @include font(28px, bold);
+      @include font(28px, 700);
     }
   }
 
