--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -25,8 +25,7 @@
       height: 52px;
       background-color: $dark-grey;
       @include font(18px, 400, $snow-white);
-      transition: transform 0.2s ease, background-color 0.2s ease,
-        border 0.2s ease, color 0.2s ease;
+      transition: transform 0.2s ease, background-color 0.2s ease, border 0.2s ease, color 0.2s ease;
       cursor: pointer;
       margin-bottom: 10px;
       padding-left: 16px;
@@ -66,8 +65,9 @@
     height: 100px;
     background-image: url("/assets/images/documents.png");
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
+    background-position-x: center;
+    background-position-y: 80%;
+    background-size: cover;
   }
 
   &__search {
