--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -16,8 +16,8 @@
     &-item {
       display: flex;
       flex-direction: column;
-      margin: 60px 20px;
-      width: 260px;
+      margin: 60px 0;
+      width: 240px;
     }
 
     &-title {
