--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <svg-icon src="./assets/icons/delete.svg" class="app-news__item-icon" *ngIf="_logged"
-                    (click)="_onDeleteNewsClick(news.date)"></svg-icon>
+                    (click)="_onDeleteNewsClick(news._id)"></svg-icon>
             </div>
 
             <div class="app-news__separator"></div>
